Aligned input boxes, readded css fix

--- a/src/app/information/information.scss
+++ b/src/app/information/information.scss
@@ -3,7 +3,7 @@
 //----------------------------
 
 .information-main {
-  padding: 10px 10px 10px 10px;
+  padding: 10px 10px 0px 10px;
   width:100%;
   height:100%;
 }
@@ -45,4 +45,8 @@
 .infoButton {
   float: right;
   margin-right: 10px;
+}
+
+#classInfo {
+  width: 100%;
 }
